Bug 1168103 - "Execution cannot reach the expression "?unknown?" inside this statement in jsfriendapi.cpp". r=evilpies